--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,8 @@
 	<style>
 		/* Mobile */
 		@media (max-width: 992px) {
-			.banner { padding: 30px !important; height: 350px; margin-top: 0px !important; background: url(banner.webp); background-color: rgba(0, 0, 0, 0.5); background-repeat: no-repeat; background-size: cover; }
+			.banner { height: 350px; margin-top: 0px !important; background: url(banner.webp); background-color: rgba(0, 0, 0, 0.5); background-repeat: no-repeat; background-size: cover; }
+			.section { padding: 30px !important; }
 			.karateman { height: 275px; float: right; margin-top: -70px; margin-right: -30px; }
 			.intro { font-size: 20px; color: #ffffff; font-weight: bold;}
 			.dojo { width: 300px; margin-top: -15px; }
@@ -27,9 +28,9 @@
 			.intro { -webkit-text-stroke: 1px black; font-size: 40px; text-transform: uppercase; color: #ffffff; font-weight: bold;}
 			.dojo { width: 700px; }
 			.topDownloadBtn { padding: 0.75rem 1.25rem; font-size: 1.25rem; }
+			.section { padding: 50px; margin-top: 30px; margin-bottom: 30px;}
 		}
 		.navbar-nav { font-size: 18px; font-weight: bold; gap: 30px; }
-		.section { padding: 50px; margin-top: 30px; margin-bottom: 30px;}
 
 		/* Animator */
 		.sprite-container {
@@ -86,10 +87,10 @@
 	<!-- About -->
 	<div id="about" class="section">
 		<h1>ENTER THE DOJO</h1>
-		<p>The ultimate destination for adrenaline-pumping martial arts action! Step into the dojo and unleash your skills in a fast-paced, action-packed karate video game that brings the thrill of combat to your fingertips. Whether you're a seasoned black belt or a beginner looking to master powerful techniques, our game offers dynamic fights, stunning visuals, and immersive gameplay. Train, fight, and rise through the ranks to become the ultimate karate champion. Are you ready to test your strength and strategy? The battle begins now!</p>
+		<p>Take on a gauntlet of skilled martial artists in a test of your combat prowess! Become a true master as you use your variety of attacks to best your opponents. Experience the detailed animations that make each punch worthy of a black belt warrior. But beware of the final boss, who knows every technique you do. Aim for the high score by perfecting your abilities in Enter the Dojo!</p>
 
 		<div style="text-align: center; margin-top: 50px;">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/q0dH2fBqPlQ?si=GzdHtdN5TmTpyqaH"
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/HKpyMkbpeEA?si=MosMpYB42Qe8CpI4"
 				title="YouTube video player"
 				frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -107,7 +108,9 @@
 				<img class="img-fluid" src="steam.svg" style="width: 400px;">
 			</div>
 			  <div class="col-12 col-md-6" style="font-size: 18px;">
-				<p>Download Enter the Dojo today and experience the thrill of real martial arts combat like never before! With stunning graphics, smooth controls, and a deep fighting system, this game lets you master powerful techniques, challenge fierce opponents, and rise through the ranks to become a true karate champion. Whether you prefer solo training, intense tournaments, or online battles against players worldwide, there’s always a new challenge waiting. Don’t miss out—hone your skills, prove your strength, and dominate the dojo. Are you ready to fight? Download now and unleash your inner warrior!</p>
+				<p>Download Enter the Dojo today from Steam.</p>
+				<p>The following platforms are supported.</p>
+				<p><img src="windows.svg">&nbsp;<img src="mac.svg">&nbsp;<img src="linux.svg"></p>
 			</div>
 			</div>
 		</div>
@@ -119,13 +122,28 @@
 	<!-- Animator -->
 	<div id="animator" class="section" style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
 		<h3>Animation Sequencer</h3>
-		<p>Select an action and use the slider to see the animation sequence.</p>
+		<p>Select an animation from the icons below, then use the slider to see the animation sequence.</p>
 		<div id="action-buttons">
 			<button class="action-btn" data-value="sprite_standkick.webp" data-frames="30" data-title="Standing Kick">
 				<img src="animator/kick.png" alt="Stand Kick">
 			</button>
-			<button class="action-btn" data-value="sprite_standpunch.webp" data-frames="15" data-title="Standing Punch">
+			<button class="action-btn" data-value="sprite_standpunch.webp" data-frames="21" data-title="Standing Punch">
 				<img src="animator/punch.png" alt="Stand Punch">
+			</button>
+			<button class="action-btn" data-value="sprite_kickcrouch.webp" data-frames="27" data-title="Crouch Kick">
+				<img src="animator/kickcrouch.png" alt="Stand Punch">
+			</button>
+			<button class="action-btn" data-value="sprite_punchcrouch.webp" data-frames="24" data-title="Crouch Punch">
+				<img src="animator/punchcrouch.png" alt="Stand Punch">
+			</button>
+			<button class="action-btn" data-value="sprite_death.webp" data-frames="32" data-title="Death">
+				<img src="animator/death.png" alt="Stand Punch">
+			</button>
+			<button class="action-btn" data-value="sprite_walk.webp" data-frames="31" data-title="Walking">
+				<img src="animator/walk.png" alt="Stand Punch">
+			</button>
+			<button class="action-btn" data-value="sprite_walkbackwards.webp" data-frames="31" data-title="Walk Backwards">
+				<img src="animator/walkbackwards.png" alt="Stand Punch">
 			</button>
 		</div>
 		<div class="sprite-container">
@@ -167,9 +185,16 @@
 		</p>
 	</div>
 
+	<!-- Open Source -->
+	<div id="open" class="section" style="color: white; background-color: #661f3a; margin-top: -30px; margin-bottom: -30px; padding: 70px;">
+		<h3>Open Source</h3>
+		<p>Enter the Dojo is an open source project, under a <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Creative Commons</a> license. You are free to use and adapt for personal or commercial purposes, as long as appropriate attribution is given. You can find all the source on <a href="https://github.com/Oliver-Misbach/EnterTheDojo" target="_blank">GitHub</a>. If you'd like to collaborate on this project please contact us.</a></p>
+		<p><a href="https://github.com/Oliver-Misbach/EnterTheDojo" target="_blank"><img src="github.svg" alt="Creative Commons" width="80"/></a><a href="https://creativecommons.org/licenses/by/4.0/" style="float: right; margin-top: 70px;"><img src="https://mirrors.creativecommons.org/presskit/buttons/88x31/svg/by.svg" alt="Creative Commons" width="80"/></a></p>
+	</div>
+
 	<!-- Godot -->
 	<div id="godot" class="section" style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
-		<h3>Special Thanks to Godot</h3>
+		<h3 style="padding-top: 30px;">Special Thanks to Godot</h3>
 		<p>This game would not be possible without the Godot Engine. Thanks to all who contribute and maintain Godot.</p>
 		<div style="text-align: center; margin-top: 50px;">
 			<a href="https://godotengine.org/" target="_blank">
@@ -207,7 +232,7 @@
 		document.querySelectorAll('.action-btn').forEach(button => {
 			button.addEventListener('click', function() {
 				const action = "animator/" + this.getAttribute('data-value');
-				const frames = this.getAttribute('data-frames');
+				const frames = this.getAttribute('data-frames') -1;
 				const title = this.getAttribute('data-title');
 				sprite.style.background = `url('${action}') no-repeat`;
 				slider.max = frames;
