--- a/web/index.html
+++ b/web/index.html
@@ -106,9 +106,10 @@
 			<div class="row align-items-start">
 			  <div class="col-12 col-md-6 text-center">
 				<img class="img-fluid" src="steam.svg" style="width: 400px;">
+				<img class="img-fluid" src="itch.svg" style="width: 400px; margin-top: 20px;">
 			</div>
 			  <div class="col-12 col-md-6" style="font-size: 18px;">
-				<p>Download Enter the Dojo today from Steam.</p>
+				<p>Download Enter the Dojo today from Steam, or itch.io.</p>
 				<p>The following platforms are supported.</p>
 				<p><img src="windows.svg">&nbsp;<img src="mac.svg">&nbsp;<img src="linux.svg"></p>
 			</div>
@@ -116,6 +117,7 @@
 		</div>
 		<p style="text-align: center; margin-top: 30px;">
 			<a class="btn btn-light btn-lg" href="https://store.steampowered.com/app/3603340/Enter_the_Dojo/"><img src="download.svg" height="50px"></a>
+			<a class="btn btn-light btn-lg" href="https://reviloliver.itch.io/enter-the-dojo"><img src="download_itch.svg" height="50px"></a>
 		</p>
 	</div>
 
@@ -124,7 +126,7 @@
 		<h3>Animation Sequencer</h3>
 		<p>Select an animation from the icons below, then use the slider to see the animation sequence.</p>
 		<div id="action-buttons">
-			<button class="action-btn" data-value="sprite_standkick.webp" data-frames="30" data-title="Standing Kick">
+			<button class="action-btn" data-value="sprite_standkick.webp" data-frames="28" data-title="Standing Kick">
 				<img src="animator/kick.png" alt="Stand Kick">
 			</button>
 			<button class="action-btn" data-value="sprite_standpunch.webp" data-frames="21" data-title="Standing Punch">
